# task-tracker-api

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  spec.md
.claude/commands/: approve-spec.md
.claude/specs/task-comments/: plan.md  spec.md
.claude/specs/task-comments-migration/: implementation-review.md  plan.md  spec.md
.claude/specs/task-reminders/: plan.md  (+1 more)
alembic/: env.py
alembic/versions/: 2baa5d553906_baseline_tasks_table.py  4c68e39a12a3_add_remind_days_before_to_tasks.py  8f3a500e1e75_add_comments_table.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/models/: __init__.py  comment.py  task.py
app/repositories/: comments.py  tasks.py
app/schemas/: comment.py  error.py  task.py
app/services/: comments.py  tasks.py
prompts/: README.md
prompts/code-review/: audit-function.md  check-security.md  review-pr.md
prompts/database/: design-schema.md  generate-migration.md  optimize-query.md
prompts/debugging/: explain-error.md  fix-performance.md  trace-bug.md
prompts/documentation/: create-runbook.md  generate-api-docs.md  write-adr.md
prompts/fastapi-endpoints/: add-auth.md  add-pagination.md  generate-endpoint.md
prompts/testing/: generate-integration-test.md  generate-load-test.md  generate-unit-test.md
tests/: conftest.py  factories.py
tests/integration/: test_comment_repository.py  test_comments_api.py  test_task_repository.py  test_tasks_api.py
tests/unit/: test_comment_service.py  test_task_service.py
(+4 files in other folders)
