[project]
name = "task-tracker-api"
version = "1.0.0"
description = "A small FastAPI + Postgres CRUD API for tracking tasks, built on the engineering playbook's FastAPI conventions."
requires-python = ">=3.11"

# Runtime dependencies only. Dev/test tools live in the dependency group
# below so a production install never ships them (core/dependency-management.md).
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.35",
    "sqlalchemy>=2.0,<2.1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "psycopg[binary]>=3.1,<4",
    "alembic>=1.13,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "httpx>=0.27,<0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Only needed if you add httpx.AsyncClient tests (frameworks/fastapi/testing.md).
# This app's handlers are sync, so it uses TestClient and needs no asyncio mode.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
